<resources>
    <string name="app_name">Waroeng Ujang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="waiter">Waiter</string>
    <string name="waitress">Waitress</string>
    <string name="table_number">Table number</string>
    <string name="serve">Serve</string>
    <string name="change">Change</string>
    <string name="headline_sign_in">Waitress sign in</string>
    <string name="search_dish">Search dish</string>
    <string name="price_before_tax">Price before tax</string>
    <string name="add">Add</string>
    <string name="summary">Summary</string>
    <string name="process_to_kitchen">Process to kitchen</string>
    <string name="total">Total</string>
    <string name="tax_10_percent">Tax (10%)</string>
    <string name="subtotal">Subtotal</string>
    <string name="customers">Customers</string>
    <string name="field_required">Field required</string>
    <string name="template_table_number">Table number %1$d</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="no_table_selected">No table selected</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="valid_table_number_helper">Valid table number is 1–15</string>
    <string name="template_duration">Duration: %1$s</string>
    <string name="menu_added">Menu added to cart</string>
    <string name="order_set">Order forwarded to kitchen</string>
    <string name="sign_out">Sign out</string>
    <string name="headline_not_serving">Serve new customer</string>
    <string name="headline_serving">Currently serving</string>
    <string name="table">Table</string>
    <string name="close_bill">Close bill</string>
    <string name="order_more">Order more</string>
    <string name="menu_detail">Menu detail</string>
    <string name="order_detail">Order Detail</string>
    <string name="invalid_current_password">The provided password is incorrect</string>
    <string name="password_confirmation_doesnt_match">The password confirmation field doesn\'t match</string>
    <string name="password_updated">Password updated successfully</string>
</resources>