<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/round_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/menuFragment"
            android:icon="@drawable/round_menu_book_24"
            android:title="@string/menu" />
        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/round_shopping_bag_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/orderFragment"
            android:icon="@drawable/round_assignment_24"
            android:title="@string/orders" />
        <item
            android:id="@+id/accountFragment"
            android:icon="@drawable/round_person_2_24"
            android:title="@string/account" />
    </group>
    <group>
        <item
            android:id="@+id/menu_sign_out"
            android:icon="@drawable/round_person_2_24"
            android:title="@string/sign_out" />
    </group>
</menu>