<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/accountFragment"
        android:name="test.s160419098.anmp.wu.session.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="test.s160419098.anmp.wu.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="test.s160419098.anmp.wu.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/openMenu"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="test.s160419098.anmp.wu.menu.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/openMenuDetail"
            app:destination="@id/menuDetailFragment" />
        <action
            android:id="@+id/changeTable"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="test.s160419098.anmp.wu.order.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/openOrderDetail"
            app:destination="@id/orderDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuDetailFragment"
        android:name="test.s160419098.anmp.wu.menu.detail.MenuDetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_menu_detail">
        <argument
            android:name="menuId"
            app:argType="long" />
    </fragment>
    <dialog
        android:id="@+id/orderDetailFragment"
        android:name="test.s160419098.anmp.wu.order.detail.OrderDetailFragment"
        android:label="@string/order_detail">
        <argument
            android:name="orderId"
            app:argType="long" />
    </dialog>
</navigation>